--- a/aula-01/js/exercicios-js-aula01.html
+++ b/aula-01/js/exercicios-js-aula01.html
@@ -50,6 +50,7 @@
         function diaDaSemana(dia, mes, ano) {
 
             if (dia < 1 || dia > 31) {
+                // FIXME não faz sentido em JavaScript (copy and paste equivocado?)
                 System.out.println("Informe um dia correto");
                 return -1;
             } else if (mes < 1 || mes > 12) {
