recurso inexistente em js

--- a/aula-01/js/exercicios-js-aula01.html
+++ b/aula-01/js/exercicios-js-aula01.html
@@ -19,7 +19,7 @@
                     segundaDezena = numero % 100;
 
                     total = (primeiraDezena + segundaDezena);
-                    total = (int) Math.pow(total, 2.0);
+                    total = Math.pow(total, 2.0);
 
                     if (total == numero)
                         return true;
