correcao mais simples (mas que merece atencao posterior)

--- a/aula-01/js/exercicios-js-aula01.html
+++ b/aula-01/js/exercicios-js-aula01.html
@@ -259,7 +259,7 @@
                 if (a.length > 1) {
                     for (var i = 1; i < a.length; i++) {
                         if (a[i] != 0) {
-                            throw "Valor fora do intervalo permitido");
+                            throw "Valor fora do intervalo permitido";
                     }
                 }
 
