codigo sintaticamente correto

--- a/aula-01/js/exercicios-js-aula01.html
+++ b/aula-01/js/exercicios-js-aula01.html
@@ -290,7 +290,7 @@
                     }
                     return c;
                 }
-                throw "Informe um numero maior que 1;
+                throw "Informe um numero maior que 1";
             }
 
             function MDC(a, b) {
