ajusta HTML para incluir arquivo js criado

--- a/aula-01/js/exercicios-js-aula01.html
+++ b/aula-01/js/exercicios-js-aula01.html
@@ -10,6 +10,8 @@
     <body>
         <div id="resultado"></div>
 
+        <script src="propriedade3025.js"></script>
+        
         <script>
             function propriedade153(numero) {
 
