ajustes de calculo da diferenca entre as datas. Refatorado o calculo de dias, transformando milliseconds em Integer.

--- a/aula-11/java/gui/index.html
+++ b/aula-11/java/gui/index.html
@@ -9,7 +9,11 @@
 	<script src="js/index.js" type="text/javascript"></script>
 </head>
 <body onload="dataCorrente()">
+	<div id="containerDescricao">
+		<p>Este site consome uma API REST para calcular a diferença entre duas datas.</p>
+	</div>
 	<div id="containerGeral">
+		<br>
 		<div id="containerDataInicial">
 			<h1>Primeira Data</h1>
 			<label for="dataInicial">Mês / Dia / Ano</label>
